--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,47 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: oklch(1 0 0);
+    --foreground: oklch(0.145 0 0);
+    --font-manrope: 'Manrope', ui-sans-serif, system-ui;
+    scroll-behavior: smooth;
+    scroll-padding: 90px;
+}
+
+img{
+    max-width: 100%;
+    display: block;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --font-sans: var(--font-manrope);
+    --font-mono: var(--font-manrope);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    background: var(--background);
+    color: var(--foreground);
+    font-family: Arial, Helvetica, sans-serif;
+}
+.hero{
+    background-image: url("../../public/blockage-hero.jpg");
+    background-size: cover;
+    /*background-position: center;*/
+    background-repeat: no-repeat;
+}
+
+/*to disable outline on click*/
+svg{
+    outline: none;
+}
+.recharts-wrapper *{
+    outline: none;
+}
+.recharts-wrapper svg{
+    outline: none;
+}
+.recharts-layer g {
+    outline: none;
 }
