hotfix:eslint and pie chart on mobile screen

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,3 +45,16 @@ svg{
 .recharts-layer g {
     outline: none;
 }
+
+/*Bar Chart Cell Color on hover*/
+.bar-cell {
+    transition: opacity 0.2s ease-in-out;
+}
+
+.bar-container:hover .bar-cell {
+    opacity: 0.7;
+}
+
+.bar-container:hover .bar-cell:hover {
+    opacity: 1;
+}
